--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Тестовая страница</title>
+    <title>1 task</title>
 </head>
 <body>
-<p>Это моя страница</p>
+<p>Hello world</p>
 </body>
 </html>
