--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,39 @@
 <!DOCTYPE html>
-<html lang="ru">
-    <!-- Ваше решение -->
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Kseniia Malysheva</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <h1>Header</h1>
+    <nav class="navigation">
+        <span>Navigation 1</span>
+        <span>Navigation 2</span>
+        <span>Navigation 3</span>
+    </nav>
+</header>
+    <main>
+    <article>
+        <h2>Article 1</h2>
+        <ul>
+            <li>Оригинальная трилогия</li>
+            <li>Трилогия приквелов</li>
+            <li>Трилогия сиквелов</li>
+        </ul>
+    </article>
+    <article>
+        <h2>Article 2</h2>
+        <ul>
+            <li>Эпизод IV - Новая надежда</li>
+            <li>Эпизод V - Империя наносит ответный удар</li>
+            <li>Эпизод VI - Возвращение джедая</li>
+        </ul>
+    </article>
+    </main>
+<footer>
+    <p>Footer</p>
+</footer>
+</body>
 </html>
