--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-
+    <div class="container">
+    <button type="button" class="primary">Primary</button>
+    <button type="button" class="primary" disabled>Primary disabled</button>
+    <button type="button" class="secondary">Secondary</button>
+    <button type="button" class="secondary" disabled>Secondary disabled</button>
+    <button type="button" class="alternate">Alternate</button>
+    <button type="button" class="alternate" disabled>Alternate disabled</button>
+    </div>
     </body>
 </html>
