03-lection1/01-button_Kseniia Malysheva

--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./button.css">
     </head>
+    <title>Buttons</title>
     <body>
     <div class="container">
     <button type="button" class="primary">Primary</button>
