03-lection1/02-accordion_Kseniia Malysheva

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,13 +6,31 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
+<div class="container">
         <details>
             <summary>
-                Accordion item
+                Accordion item 1
             </summary>
             <p>
-                Hidden content
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
+        <details>
+            <summary>
+                Accordion item 2
+            </summary>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </details>
+        <details>
+            <summary>
+                Accordion item 3
+            </summary>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </details>
+</div>
     </body>
 </html>
