03-lection1/02-accordion_Kseniia Malysheva

--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Страница с кнопкой -->
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
@@ -7,13 +6,13 @@
         <title>Buttons</title>
     </head>
     <body>
-    <div class="container">
-    <button type="button" class="primary">Primary</button>
-    <button type="button" class="primary" disabled>Primary disabled</button>
-    <button type="button" class="secondary">Secondary</button>
-    <button type="button" class="secondary" disabled>Secondary disabled</button>
-    <button type="button" class="alternate">Alternate</button>
-    <button type="button" class="alternate" disabled>Alternate disabled</button>
+    <div style="display: flex; gap: 16px; flex-wrap: wrap;">
+    <button type="button" class="button button_primary">Primary</button>
+    <button type="button" class="button button_primary" disabled>Primary disabled</button>
+    <button type="button" class="button button_secondary">Secondary</button>
+    <button type="button" class="button button_secondary" disabled>Secondary disabled</button>
+    <button type="button" class="button button_alternate">Alternate</button>
+    <button type="button" class="button button_alternate" disabled>Alternate disabled</button>
     </div>
     </body>
 </html>
