03-lection1/02-accordion_Kseniia Malysheva

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -7,28 +7,28 @@
         <title>Accordion</title>
     </head>
     <body>
-<div class="container">
-        <details>
-            <summary>
+<div style="display: flex; gap: 8px; flex-wrap: wrap">
+        <details class="accordion">
+            <summary class="accordion_title">
                 Accordion item 1
             </summary>
-            <p>
+            <p class="accordion_text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
-        <details>
-            <summary>
+        <details class="accordion">
+            <summary class="accordion_title">
                 Accordion item 2
             </summary>
-            <p>
+            <p class="accordion_text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
-        <details>
-            <summary>
+        <details class="accordion">
+            <summary class="accordion_title">
                 Accordion item 3
             </summary>
-            <p>
+            <p class="accordion_text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
