03-lection1/02-accordion_Kseniia Malysheva

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -7,7 +7,7 @@
         <title>Accordion</title>
     </head>
     <body>
-<div style="display: flex; gap: 8px; flex-wrap: wrap">
+<div style="display: flex; gap: 8px; flex-wrap: wrap; flex-direction: column">
         <details class="accordion">
             <summary class="accordion_title">
                 Accordion item 1
