--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -7,28 +7,28 @@
         <title>Accordion</title>
     </head>
     <body>
-<div style="display: flex; gap: 8px; flex-wrap: wrap; flex-direction: column">
-        <details class="accordion">
-            <summary class="accordion_title">
+<div class="accordion">
+        <details class="accordion__section">
+            <summary class="accordion__title">
                 Accordion item 1
             </summary>
-            <p class="accordion_text">
+            <p class="accordion__text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
-        <details class="accordion">
-            <summary class="accordion_title">
+        <details class="accordion__section">
+            <summary class="accordion__title">
                 Accordion item 2
             </summary>
-            <p class="accordion_text">
+            <p class="accordion__text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
-        <details class="accordion">
-            <summary class="accordion_title">
+        <details class="accordion__section">
+            <summary class="accordion__title">
                 Accordion item 3
             </summary>
-            <p class="accordion_text">
+            <p class="accordion__text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
