--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -4,8 +4,48 @@
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./histogram.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
     </head>
     <body>
-
+    <section class="banner">
+        <div class="banner__top">
+            <h2 class="banner__top_header">Total orders</h2>
+            <a href="#" class="banner__top_link">View all</a>
+        </div>
+        <span class="banner__counter">50254</span>
+        <div class="banner__graph">
+            <div class="banner__graph_item height_1"></div>
+            <div class="banner__graph_item height_3"></div>
+            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_3"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_3"></div>
+            <div class="banner__graph_item height_1"></div>
+            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_3"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_1"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_3"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_1"></div>
+            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_3"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item height_2"></div>
+            <div class="banner__graph_item height_1"></div>
+            <div class="banner__graph_item height_4"></div>
+        </div>
+    </section>
     </body>
 </html>
+
