03-lection1/02-accordion_Kseniia Malysheva

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -6,6 +6,19 @@
         <link rel="stylesheet" href="./skeleton.css">
     </head>
     <body>
+    <div class="skeleton">
+        <div class="skeleton__top">
+            <div class="skeleton__top_circle"></div>
+            <div class="skeleton__content">
+                <div class="skeleton__content_row skeleton__content_title"></div>
+                <div class="skeleton__content_row skeleton__content_subtitle"></div>
+            </div>
+        </div>
+        <div class="skeleton__content">
+            <div class="skeleton__content_row"></div>
+            <div class="skeleton__content_row"></div>
+        </div>
+    </div>
 
     </body>
 </html>
