--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Страница со скелетоном -->
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./skeleton.css">
+        <title>Skeleton</title>
     </head>
     <body>
     <div class="skeleton">
