03-lection1/02-accordion_Kseniia Malysheva

--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./histogram.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
+        <title>Graph</title>
     </head>
     <body>
     <section class="banner">
@@ -14,36 +15,36 @@
         </div>
         <span class="banner__counter">50254</span>
         <div class="banner__graph">
-            <div class="banner__graph_item height_1"></div>
-            <div class="banner__graph_item height_3"></div>
-            <div class="banner__graph_item height_4"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_3"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_3"></div>
-            <div class="banner__graph_item height_1"></div>
-            <div class="banner__graph_item height_4"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_3"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_1"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_4"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_3"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_4"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_1"></div>
-            <div class="banner__graph_item height_4"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_3"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_4"></div>
-            <div class="banner__graph_item height_2"></div>
-            <div class="banner__graph_item height_1"></div>
-            <div class="banner__graph_item height_4"></div>
+            <div class="banner__graph_item large"></div>
+            <div class="banner__graph_item regular"></div>
+            <div class="banner__graph_item small"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item regular"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item regular"></div>
+            <div class="banner__graph_item large"></div>
+            <div class="banner__graph_item small"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item regular"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item large"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item small"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item regular"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item small"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item large"></div>
+            <div class="banner__graph_item small"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item regular"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item small"></div>
+            <div class="banner__graph_item medium"></div>
+            <div class="banner__graph_item large"></div>
+            <div class="banner__graph_item small"></div>
         </div>
     </section>
     </body>
