--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
     </head>
     <body>
+    <div class="page">
+    <header class="header">
+        <div class="container">
+        <h1 class="header_title">Reusable component library</h1>
+        </div>
+    </header>
+        <main class="main">
+            <div class="container">
+                <div class="card">
+                    <div class="preview-card">
+                        <h2 class="preview-card-title">Tooltip</h2>
+                    </div>
+                    <div class="preview-card">
+                        <h2 class="preview-card-title">Custom form elements</h2>
+                    </div>
+                    <div class="preview-card">
+                        <h2 class="preview-card-title">Calendar</h2>
+                    </div>
+                    <div class="preview-card">
+                        <h2 class="preview-card-title">Modal dialog</h2>
+                    </div>
+                    <div class="preview-card">
+                        <h2 class="preview-card-title">Histogram</h2>
+                    </div>
+                    <div class="preview-card">
+                        <h2 class="preview-card-title">Avatar</h2>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer"></footer>
+    </div>
 
     </body>
 </html>
