--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
+    <title>Page</title>
     </head>
     <body>
     <div class="page">
