03-lection1/02-accordion_Kseniia Malysheva

--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -8,43 +8,43 @@
         <title>Graph</title>
     </head>
     <body>
-    <section class="banner">
-        <div class="banner__top">
-            <h2 class="banner__top_header">Total orders</h2>
-            <a href="#" class="banner__top_link">View all</a>
+    <section class="histogram">
+        <div class="histogram__top">
+            <h2 class="histogram__header">Total orders</h2>
+            <a href="#" class="histogram__link">View all</a>
         </div>
-        <span class="banner__counter">50254</span>
-        <div class="banner__graph">
-            <div class="banner__graph_item large"></div>
-            <div class="banner__graph_item regular"></div>
-            <div class="banner__graph_item small"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item regular"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item regular"></div>
-            <div class="banner__graph_item large"></div>
-            <div class="banner__graph_item small"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item regular"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item large"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item small"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item regular"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item small"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item large"></div>
-            <div class="banner__graph_item small"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item regular"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item small"></div>
-            <div class="banner__graph_item medium"></div>
-            <div class="banner__graph_item large"></div>
-            <div class="banner__graph_item small"></div>
+        <span class="histogram__counter">50254</span>
+        <div class="histogram__graph">
+            <div class="histogram__graph-item large"></div>
+            <div class="histogram__graph-item regular"></div>
+            <div class="histogram__graph-item small"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item regular"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item regular"></div>
+            <div class="histogram__graph-item large"></div>
+            <div class="histogram__graph-item small"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item regular"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item large"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item small"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item regular"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item small"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item large"></div>
+            <div class="histogram__graph-item small"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item regular"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item small"></div>
+            <div class="histogram__graph-item medium"></div>
+            <div class="histogram__graph-item large"></div>
+            <div class="histogram__graph-item small"></div>
         </div>
     </section>
     </body>
