--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <div class="page">
     <header class="header">
         <div class="container">
-        <h1 class="header_title">Reusable component library</h1>
+        <h1 class="header__title">Reusable component library</h1>
         </div>
     </header>
         <main class="main">
             <div class="container">
-                <div class="card">
-                    <div class="preview-card">
-                        <h2 class="preview-card-title">Tooltip</h2>
+                <div class="cards">
+                    <div class="card__preview">
+                        <h2 class="card__title">Tooltip</h2>
                     </div>
-                    <div class="preview-card">
-                        <h2 class="preview-card-title">Custom form elements</h2>
+                    <div class="card__preview">
+                        <h2 class="card__title">Custom form elements</h2>
                     </div>
-                    <div class="preview-card">
-                        <h2 class="preview-card-title">Calendar</h2>
+                    <div class="card__preview">
+                        <h2 class="card__title">Calendar</h2>
                     </div>
-                    <div class="preview-card">
-                        <h2 class="preview-card-title">Modal dialog</h2>
+                    <div class="card__preview">
+                        <h2 class="card__title">Modal dialog</h2>
                     </div>
-                    <div class="preview-card">
-                        <h2 class="preview-card-title">Histogram</h2>
+                    <div class="card__preview">
+                        <h2 class="card__title">Histogram</h2>
                     </div>
-                    <div class="preview-card">
-                        <h2 class="preview-card-title">Avatar</h2>
+                    <div class="card__preview">
+                        <h2 class="card__title">Avatar</h2>
                     </div>
                 </div>
             </div>
