03-lection1/02-accordion_Kseniia Malysheva

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -8,15 +8,15 @@
     <body>
     <div class="skeleton">
         <div class="skeleton__top">
-            <div class="skeleton__top_circle"></div>
+            <div class="skeleton__top-circle"></div>
             <div class="skeleton__content">
-                <div class="skeleton__content_row skeleton__content_title"></div>
-                <div class="skeleton__content_row skeleton__content_subtitle"></div>
+                <div class="skeleton__row skeleton__content_title"></div>
+                <div class="skeleton__row skeleton__content_subtitle"></div>
             </div>
         </div>
         <div class="skeleton__content">
-            <div class="skeleton__content_row"></div>
-            <div class="skeleton__content_row"></div>
+            <div class="skeleton__row"></div>
+            <div class="skeleton__row"></div>
         </div>
     </div>
 
